Date tds are now on one line.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -299,6 +299,10 @@ table td {
     border-top: 1px solid #efefef;
 }
 
+table td.date {
+    min-width:70pt;
+}
+
 table th { color: #000; }
 
 table caption + thead tr:first-child th,
