Current page nav item should be coloured black

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -419,6 +419,10 @@ main.content {
     margin: 0;
 }
 
+.blog-nav-item.selected-nav-item {
+    color:black;
+}
+
 .header-link {
 	color: white;
 	text-decoration: none;
