Changed blog nav item to li

--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,3 +1,6 @@
+<ul>
 {{#foreach navigation}}
-    <h3 class="blog-nav-item"><a class="header-link" href="{{url absolute="true"}}">{{label}}</a></h3>
+    <li class="blog-nav-item"><a class="header-link" href="{{url absolute="true"}}">{{label}}</a></li>
 {{/foreach}}
+</ul>
+
