--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -871,6 +871,7 @@ main.content {
     .blog-nav-item {
         width:3em;
         margin: 0 0.5em;
+        display: inline;
     }
 
 	main.content {
