Changed navigation back to headers

--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,6 +1,4 @@
-<ul>
 {{#foreach navigation}}
-    <li class="blog-nav-item"><a class="header-link" href="{{url absolute="true"}}">{{label}}</a></li>
+    <h3 class="blog-nav-item"><a class="header-link" href="{{url absolute="true"}}">{{label}}</a></h3>
 {{/foreach}}
-</ul>
 
