--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -493,6 +493,15 @@ main.content {
     text-decoration: none;
 }
 
+.post-image {
+    width:75%;
+    margin:1em auto;
+}
+
+.post-image img {
+    width:100%;
+}
+
 .post-excerpt p {
     margin: 1.6rem 0 0 0;
     font-size: 0.9em;
