--- a/post.hbs
+++ b/post.hbs
@@ -14,6 +14,11 @@
         {{#post}}
 
         <h1 class="post-title">{{{title}}}</h1>
+        {{#if post-image}}
+            <div class="post-image">
+                <img src={{post-image}} />
+            </div>
+        {{/if}}
 
         <section class="post-content" id="jetzt-container">
             {{content}}
