never mind for height

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -481,6 +481,7 @@ main.content {
     display: inline-block;
     vertical-align: middle;
     min-width: 90%;
+    height: 90%;
     border-radius: 5px;
 }
 
