--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -481,7 +481,8 @@ main.content {
     display: inline-block;
     vertical-align: middle;
     min-width: 90%;
-    height: 90%;
+    max-width:90%;
+    height: auto;
     border-radius: 5px;
 }
 
