post thumbnail container has auto height (depends on image)

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -462,7 +462,7 @@ main.content {
 
 .post-thumbnail {
     float: left;
-    height: 120px;
+    height: auto;
     margin-top: 1.25rem;
     min-height:6rem;
     width: 25%;
