--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -467,7 +467,7 @@ main.content {
     min-height:6rem;
     width: 25%;
     min-width: 10em;
-    text-align: center;
+    text-align: left;
 }
 
 .post-thumbnail:before {
