--- a/index.hbs
+++ b/index.hbs
@@ -32,7 +32,12 @@
     {{!! After all the posts, we have the previous/next pagination links }}
     {{pagination}}
 
-	{{footer}}
+	<footer class="site-footer">
+        <div class="inner">
+             <section class="copyright">All content copyright <a href="/">{{@blog.title}}</a> &copy; 2013 &bull; All rights reserved.</section>
+             <section class="poweredby">Proudly published with <a class="icon-ghost" href="http://ghost.org">Ghost</a></section>
+        </div>
+    </footer>
 
 	 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
