--- a/index.hbs
+++ b/index.hbs
@@ -12,9 +12,10 @@
 	{{#foreach posts}}
     <article class="{{post_class}}">
         <header class="post-header">
+        <!--
             <span class="post-meta"><time datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMM YYYY"}}</time> {{#if tags}}on {{tags}}{{/if}}
 			| <a href="{{url}}#disqus_thread">Comments<a>
-			</span>
+			</span> -->
             <h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
         </header>
 		{{#if image}}
