--- a/post.hbs
+++ b/post.hbs
@@ -24,9 +24,11 @@
             {{content}}
         </section>
 
-        <footer class="post-footer">
-
-            
+        <footer class="site-footer">
+            <div class="inner">
+                 <section class="copyright">All content copyright <a href="/">{{@blog.title}}</a> &copy; 2013 &bull; All rights reserved.</section>
+                 <section class="poweredby">Proudly published with <a class="icon-ghost" href="http://ghost.org">Ghost</a></section>
+            </div>
         </footer>
 
         {{/post}}
