added test social icons that might work

--- a/default.hbs
+++ b/default.hbs
@@ -34,6 +34,16 @@
 				<h2 class="blog-description">{{@blog.description}}</h2>
                 <br>
 				{{navigation}}
+
+                <ul id="social">
+                    <li class="email"> oschneid[at]cs.ubc.ca </li>
+
+                    <!--<li><a href="https://github.com/oschneid" target="_blank"><img class="social github" src="images/github-24.png"></a></li>
+                    <li><a href="http://www.linkedin.com/pub/oliver-schneider/24/229/b09" target="_blank"><img class="social linkedin" src="images/linkedin-24.png"></a></li>
+                    <li><a href="http://www.mendeley.com/profiles/oliver-schneider/" target="_blank"><img class="social mendeley" src="images/mendeley-24.png"></a></li>-->
+                    <li><a href="http://www.twitter.com/oschneid" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+
+                </ul>
 			</div>
 		</div>
 	</header>
