--- a/default.hbs
+++ b/default.hbs
@@ -33,18 +33,18 @@
 				{{#if @blog.logo}}<a id="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="Blog Logo" /></a>{{/if}}
 				<h1 class="blog-title">{{@blog.title}}</h1>
 				<h2 class="blog-description">{{@blog.description}}</h2>
-                <br>
-				{{navigation}}
-
                 <ul id="social">
                     <li class="email"> oschneid[at]cs.ubc.ca </li>
 
                     <li><a href="https://github.com/oschneid" target="_blank"><i class="fa fa-github"></i></a></li>
                     <li><a href="http://www.linkedin.com/pub/oliver-schneider/24/229/b09" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="http://www.mendeley.com/profiles/oliver-schneider/" target="_blank"><i class="fa fa-mendeley"></i></a></li>
+                    <!--<li><a href="http://www.mendeley.com/profiles/oliver-schneider/" target="_blank"><i class="fa fa-mendeley"></i></a></li>-->
                     <li><a href="http://www.twitter.com/oschneid" target="_blank"><i class="fa fa-twitter"></i></a></li>
 
                 </ul>
+                <br>
+				{{navigation}}
+
 			</div>
 		</div>
 	</header>
