--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -426,17 +426,18 @@ main.content {
 
 #social
 {
-    margin-top:1em;
-    text-align:right;
+    /*margin-top:1em;*/
+    /*text-align:right;*/
     padding-right:0px;
     list-style-type: none; 
 }
 
 #social li
 {
-    float:right;
+    display:inline;
     margin-right:0px;
     margin-left:3px;
+    color:white;
 }
 
 .header-link {
