--- a/default.hbs
+++ b/default.hbs
@@ -34,8 +34,7 @@
 				<h1 class="blog-title">{{@blog.title}}</h1>
 				<h2 class="blog-description">{{@blog.description}}</h2>
                 <ul id="social">
-                    <li class="email"> oschneid[at]cs.ubc.ca </li>
-
+                    <li><a href="mailto:oschneid@cs.ubc.ca"><i class="fa fa-envelope"></i></a></li>
                     <li><a href="https://github.com/oschneid" target="_blank"><i class="fa fa-github"></i></a></li>
                     <li><a href="http://www.linkedin.com/pub/oliver-schneider/24/229/b09" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                     <!--<li><a href="http://www.mendeley.com/profiles/oliver-schneider/" target="_blank"><i class="fa fa-mendeley"></i></a></li>-->
