margin for social to 0

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -429,6 +429,7 @@ main.content {
     /*margin-top:1em;*/
     /*text-align:right;*/
     padding-right:0px;
+    margin:0px;
     list-style-type: none; 
 }
 
