--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -429,13 +429,14 @@ main.content {
     /*margin-top:1em;*/
     /*text-align:right;*/
     /*padding-right:0px;*/
-    margin:0px;
+    margin:auto 0px;
     list-style-type: none; 
 }
 
 #social li
 {
     display:inline;
+    margin: 0.25em 0;
 }
 #social i.fa {
     color:white;
@@ -915,6 +916,11 @@ main.content {
     .blog-description {
         font-size: 1.7rem;
         line-height: 1.5em;
+    }
+
+    #social
+    {
+        margin:0px;
     }
 
     .post {
