--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -428,7 +428,8 @@ main.content {
 {
     /*margin-top:1em;*/
     /*text-align:right;*/
-    /*padding-right:0px;*/
+    padding-right:0px;
+    padding-left:0px;
     margin:auto 0px;
     list-style-type: none; 
 }
@@ -436,7 +437,7 @@ main.content {
 #social li
 {
     display:inline;
-    margin: 0.25em 0;
+    margin: 0.5em 0;
 }
 #social i.fa {
     color:white;
