--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -430,14 +430,14 @@ main.content {
     /*text-align:right;*/
     padding-right:0px;
     padding-left:0px;
-    margin:auto 0px;
+    margin:0px;
     list-style-type: none; 
 }
 
 #social li
 {
     display:inline;
-    margin: 0.5em 0;
+    margin: 0em 0.5em;
 }
 #social i.fa {
     color:white;
