--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -437,7 +437,7 @@ main.content {
 #social li
 {
     display:inline;
-    margin: 0em 0.25em;
+    margin: 0em 0.1em;
 }
 #social i.fa {
     color:white;
@@ -897,6 +897,11 @@ main.content {
 
     #site-head-content {
         text-align:center;
+    }
+
+    #social li
+    {
+        margin: 0em 0.25em;
     }
 
     .blog-nav-item {
