thumbnail ratio/size

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -486,6 +486,7 @@ main.content {
     min-height:6rem;
     width: 25%;
     min-width: 10rem;
+    max-height:15rem;
     text-align: left;
 }
 
@@ -501,10 +502,8 @@ main.content {
     vertical-align: middle;
     min-width: 90%;
     max-width:90%;
-    width:auto
     height: auto;
-    min-height:14rem;
-    max-height:16rem;
+    max-height:90%;
     border-radius: 5px;
 }
 
