--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -486,7 +486,7 @@ main.content {
     min-height:6rem;
     width: 25%;
     min-width: 10rem;
-    max-height:100%;
+    max-height:15rem;
     text-align: left;
 }
 
