--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -426,7 +426,7 @@ main.content {
 
 #social
 {
-    /*margin-top:1em;*/
+    margin-top:0.5em;
     /*text-align:right;*/
     padding-right:0px;
     padding-left:0px;
