--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -533,6 +533,8 @@ main.content {
     padding-bottom: 56.25%; /* 16:9 */
     padding-top: 25px;
     height: 0;
+    margin-left:auto;
+    margin-right:auto;
 }
 .videoWrapper iframe {
     position: absolute;
