--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -533,6 +533,8 @@ main.content {
     padding-bottom: 56.25%; /* 16:9 */
     padding-top: 25px;
     height: 0;
+    max-width:600px;
+    max-height:340px;
     margin-left:auto;
     margin-right:auto;
 }
@@ -542,7 +544,6 @@ main.content {
     left: 0;
     width: 100%;
     height: 100%;
-    max-width:600px;
 }
 
 .post-excerpt p {
