--- a/index.hbs
+++ b/index.hbs
@@ -8,6 +8,9 @@
 {{! The main content area on the homepage }}
 <main class="content" role="main">
 
+    <h1 class="post-title">Projects</h1>
+
+
     {{! Each post will be output using this markup }}
 	{{#foreach posts}}
     <article class="{{post_class}}">
