--- a/index.hbs
+++ b/index.hbs
@@ -7,8 +7,9 @@
 
 {{! The main content area on the homepage }}
 <main class="content" role="main">
-
-    <h1 class="post-title">Projects</h1>
+    <article>
+        <h1 class="post-title">Projects</h1>
+    </article>
 
 
     {{! Each post will be output using this markup }}
