--- a/index.hbs
+++ b/index.hbs
@@ -7,7 +7,7 @@
 
 {{! The main content area on the homepage }}
 <main class="content" role="main">
-    <article>
+    <article class="post page">
         <h1 class="post-title">Projects</h1>
     </article>
 
