Mobile nav item margin

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1018,7 +1018,7 @@ main.content {
 
      .blog-nav-item {
         width:1.5em;
-        margin: 0 0;
+        margin: 0 1em;
     }
 
     .post-thumbnail {
