thumbnail on small screen

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1032,6 +1032,7 @@ main.content {
     .post-thumbnail {
         width:100%;
         height:auto;
+        max-height:20rem;
     }
 
     h1, h2 {
