--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -504,12 +504,11 @@ main.content {
 .post-thumbnail img {
     display: inline-block;
     vertical-align: middle;
-    /*min-width: 90%;*/
+    min-width: 75%;
     max-width:90%;
     height: auto;
     max-height:90%;
     border-radius: 5px;
-    margin:auto;
 }
 
 .post-title {
