Updated email address for OS website

--- a/default.hbs
+++ b/default.hbs
@@ -34,7 +34,7 @@
 				<h1 class="blog-title">{{@blog.title}}</h1>
 				<h2 class="blog-description">{{@blog.description}}</h2>
                 <ul id="social">
-                    <li><a href="mailto:oschneid@cs.ubc.ca"><i class="fa fa-envelope"></i></a></li>
+                    <li><a href="mailto:Oliver.Schneider@hpi.de"><i class="fa fa-envelope"></i></a></li>
                     <li><a href="https://scholar.google.ca/citations?user=dc2aKrEAAAAJ"><i class="fa fa-graduation-cap"></i></a></li>
                     <li><a href="https://github.com/oschneid" target="_blank"><i class="fa fa-github"></i></a></li>
                     <li><a href="http://www.linkedin.com/pub/oliver-schneider/24/229/b09" target="_blank"><i class="fa fa-linkedin"></i></a></li>
