--- a/index.hbs
+++ b/index.hbs
@@ -7,9 +7,44 @@
 
 {{! The main content area on the homepage }}
 <main class="content" role="main">
+<article class="post page">
+
+
+
+
+<!--
+        <h1 class="post-title">Oliver Schneider: Haptic Computing</h1>
+
+        <br>
+-->
+
+        <section class="post-content" id="jetzt-container">
+            <!--![img](/content/images/2015/12/IMG_2903.jpg)-->
+
+<p>I am a <strong>Postdoctoral Scholar</strong> at the <a href="http://hpi.de/">Hasso Plattner Institute</a> working with <a href="http://www.patrickbaudisch.com">Patrick Baudisch</a>. I completed my PhD in Computer Science at the <a href="http://www.cs.ubc.ca">University of British Columbia</a>, where I worked with <a href="http://www.cs.ubc.ca/~maclean/">Karon MacLean</a>. During my PhD, I worked with <a href="https://www.disneyresearch.com/">Disney Research</a>, first as an intern and then as a consultant.</p>
+
+<p>I research <strong>Human-Computer Interaction</strong>, specifically, <strong>Haptic Computing</strong>. Haptic technology engages the sense of touch by providing physical feedback to users. I argue that the limiting factor for haptic technology is the lack of computing tools – systems that enable the <strong>creation, deployment, and large-scale study of haptic feedback</strong>. Without these tools, haptic technology will be limited to small, in-lab studies and slow deployment into commercial applications. My long-term goal is a suite of haptic computing tools to assist the creation, deployment, and study of haptic technology.</p>
+
+<!--
+<p>My main research interests are:</p>
+
+<ul>
+<li><strong>Haptics and multimodal interfaces.</strong> Humans live in a rich world with many senses, yet technology barely engages beyond screens. I believe touch-based feedback &amp; physical user interfaces are critical to improving our relationship with the digital world.</li>
+<li><strong>Creativity-support tools.</strong> Creative processes, like the design of new experiences in VR and AR, are a challenging example of humans working with a computer.</li>
+<li><strong>Software engineering of new media.</strong> Novel data structures, software architectures, and programming languages are essential to developing haptic and multimodal computing.</li>
+</ul>
+
+<p>I also maintain interest in related areas, including STEM and computer science education, persuasive technology, affective computing, and usable security and privacy.</p>
+-->
+        </section>
+
+
+    </article>
+<!--
     <article class="post page">
         <h1 class="post-title">Projects</h1>
     </article>
+-->
 
 
     {{! Each post will be output using this markup }}
